src/style.css
body {
  margin: 0;
}

.stars {
  display: flex;
  height: 20px;
}

.stars:last-of-type {
  height: 16px;
}

.stars__star {
  width: 16px;
  height: 16px;
  margin-right: 4px;
  background-image: url('./images/star.svg');
  background-position: center;
  background-repeat: no-repeat;
}

.stars__star:last-of-type {
  margin-right: 0;
}

.stars--5 .stars__star,
.stars--1 .stars__star:nth-child(-n + 1),
.stars--2 .stars__star:nth-child(-n + 2),
.stars--3 .stars__star:nth-child(-n + 3),
.stars--4 .stars__star:nth-child(-n + 4) {
  background-image: url('./images/star-active.svg');
}

